@@ -26,6 +26,8 @@ ScrollZ
     ! hopefully scrolling through lastlog is now fixed for good
     ! nick tab completion should now traverse all channels in
       search for matching nicks (reported by Tim)
+    ! more cases where channels go to wrong window, yay for
+      ircii handling of hidden windows
 
 ------------------------------------------------------------------------------
 
